--- a/catalogue/templates/catalogue/catalog_services.html
+++ b/catalogue/templates/catalogue/catalog_services.html
@@ -57,7 +57,7 @@
       <h3>
         <a href="/catalog/services/" class="d-flex align-items-center pb-3 mb-3 link-purple text-decoration-none border-bottom text-white">
           <i class="fa-solid fa-bars-staggered"></i>&nbsp;
-          <span class="fs-5 fw-semibold">Catalogue</span>
+          <span class="fs-5 fw-semibold">Service Catalog</span>
         </a>
       </h3>
       <ul class="my-3">
