--- a/catalogue/templates/catalogue/catalog.html
+++ b/catalogue/templates/catalogue/catalog.html
@@ -88,6 +88,7 @@
       <div class="col-md-auto">
         <div class="flex-shrink-0 p-3 border rounded-3 my-2" style="width: 560px;">
           <p>Click any branch or <a href="{% url 'create_catalog' %}" class="w3-btn w3-deep-purple w3-round-large w3-hover-pink">Add new branch to tree</a></p>
+          <p>need to add catalog to new root branch template</p>
         </div>
       </div>
     </div>
